--- a/components/generator/list.module.scss
+++ b/components/generator/list.module.scss
@@ -101,7 +101,7 @@
         border-radius: $radius;
         margin: 0;
         white-space: pre-line;
-        word-break: normal;
+        word-break: break-all;
       }
 
       @include buttons($whiteSpace: true, $height: 100%, $width: 100%);
